tests/negative/syntax/import_inside_function/input.ci
void main() {
    import "utils.ci";
}
